tests/errors/block_undefined_variable.dang
# Test: block body references undefined variable

numbers: [Int!]! = [1, 2, 3]

# ERROR: "multiplier" not found in env
result: [Int!]! = numbers.map { x => x * multiplier }
